made it compile with java 1.4 again