@@ -94,7 +94,7 @@ public class DayMarkers extends MMObjectBuilder {
         addFunction(new AbstractFunction("ageForNumber", new Parameter[] { new Parameter("nodenumber", Integer.class)}, ReturnType.INTEGER) {
                 public Object getFunctionValue(Parameters parameters) {
                     int nodeNumber = Casting.toInt(parameters.get("nodenumber"));
-                    return Integer.valueOf(DayMarkers.this.getAge(nodeNumber));
+                    return new Integer(DayMarkers.this.getAge(nodeNumber));
                 }
 
             });
